erDiagram
    users {
        bigint id PK
        string nom
        string prenom
        string identifiant
        string email
        string agence
        string role
    }

    secteurs {
        bigint id PK
        string nom_secteur
        string emplacement
        string agence
        string num_torne
        decimal latitude
        decimal longitude
    }

    clients {
        bigint id PK
        string police
        string nom
        string prenom
        string cin
        string telephone
        string adresse
        string type_abonnement
        string service_type
        bigint id_secteur FK
        boolean abonne
    }

    compteurs {
        bigint id PK
        string cadran
        string calibre
        string marque
        string service_type
        decimal index_releve
        bigint id_client FK
        bigint id_secteur FK
    }

    pannes {
        bigint id PK
        bigint id_compteur FK
        date date_panne
        string anomalie
        string status
        bigint assigned_to FK
    }

    reparations {
        bigint id PK
        bigint id_panne FK
        bigint id_plombier FK
        date date_reparation
        text description
    }

    releves {
        bigint id PK
        bigint compteur_id FK
        decimal ancien_index
        decimal nouvel_index
        decimal consommation
        date periode_debut
        date periode_fin
        bigint created_by FK
    }

    interventions {
        bigint id PK
        string intervention_number
        bigint panne_id FK
        bigint client_id FK
        bigint meter_id FK
        bigint technician_id FK
        string service_type
        string work_type
        json materials_used
        text observations
        string priority
        string status
        datetime started_at
        datetime completed_at
    }

    activity_logs {
        bigint id PK
        bigint user_id FK
        string action
        string module
        string ip_address
        json metadata
    }

    settings {
        bigint id PK
        string key
        json value
    }

    notifications {
        uuid id PK
        string type
        string notifiable_type
        bigint notifiable_id
        json data
        datetime read_at
    }

    secteurs o|--o{ clients : "id_secteur"
    secteurs ||--o{ compteurs : "id_secteur"
    clients ||--o{ compteurs : "id_client"
    compteurs ||--o{ pannes : "id_compteur"
    users o|--o{ pannes : "assigned_to"
    pannes ||--o{ reparations : "id_panne"
    users o|--o{ reparations : "id_plombier"
    compteurs ||--o{ releves : "compteur_id"
    users o|--o{ releves : "created_by"
    pannes o|--o{ interventions : "panne_id"
    users ||--o{ interventions : "technician_id"
    clients o|--o{ interventions : "client_id"
    compteurs o|--o{ interventions : "meter_id"
    users o|--o{ activity_logs : "user_id"
    users ||--o{ notifications : "notifiable_id (usage actuel)"